Quedo re propio

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         <activity
             android:name=".AltaActividadDeCampo"
             android:exported="true" />
+        <activity
+            android:name=".MostraActividadDeCampo"
+            android:exported="true" />
     </application>
 
 </manifest>
