--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,26 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GrupalSemana2">
+        android:theme="@style/Theme.GrupalSemana2"
+        android:usesCleartextTraffic="true">
+        <service
+            android:name=".servicios.ServicioMostrarLog"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
-            android:name=".ListarActividadesDeCampo"
+            android:name=".presentacion.ListarActividadesDeCampo"
             android:exported="true" />
         <activity
-            android:name=".AltaActividadDeCampo"
+            android:name=".presentacion.AltaActividadDeCampo"
             android:exported="true" />
         <activity
-            android:name=".MostraActividadDeCampo"
+            android:name=".presentacion.MostraActividadDeCampo"
             android:exported="true" />
     </application>
 
