--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GrupalSemana2"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ui.login.Login"
+            android:exported="true"
+            android:label="@string/title_activity_login" />
+
         <service
             android:name=".servicios.ServicioMostrarLog"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <activity
             android:name=".presentacion.ListarActividadesDeCampo"
