--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,11 +7,16 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="IAGRO"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GrupalSemana2"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".prueba"
+            android:exported="true"
+            android:label="@string/title_activity_prueba"
+            android:theme="@style/Theme.GrupalSemana2.NoActionBar" />
 
         <service
             android:name=".servicios.ServicioMostrarLog"
