sprint 3 terminado, con bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.GrupalSemana2"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".presentacion.login"
+            android:exported="true" />
+        <activity
             android:name=".prueba"
             android:exported="true"
             android:label="@string/title_activity_prueba"
