--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,9 +6,11 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-feature android:name="android.hardware.camera"
-                  android:required="true" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GrupalSemana2"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".ImagenPopUp"
+            android:exported="true" />
         <activity
             android:name=".presentacion.login"
             android:exported="true" />
@@ -34,12 +39,10 @@
             android:name=".servicios.ServicioActividadesDeCampo"
             android:enabled="true"
             android:exported="true" />
-
         <service
             android:name=".servicios.ServicioRegiones"
             android:enabled="true"
             android:exported="true" />
-
         <service
             android:name=".servicios.ServicioDepartamentos"
             android:enabled="true"
